# streamplatform

./: readme.md
client/: go.mod  main.go  package-lock.json  package.json  pyproject.toml  wails.json
client/app/: layout.tsx  page.tsx
client/app/search/: page.tsx
client/app/upload/: page.tsx
client/app/watch/[id]/: page.tsx
client/cmd/: main.go
client/components/: categories.tsx  image-search.tsx  navigation-menu.tsx  theme-toggle.tsx  video-card.tsx  video-grid.tsx  video-hero.tsx  video-player.tsx  video-upload-form.tsx
client/components/ui/: animated-card.tsx
client/config/: config.go
client/frontend/: index.html  package-lock.json
client/hooks/: use-search.ts
client/lib/: data.ts  types.ts
client/streamplatform/: db.sqlite3  manage.py
client/streamplatform/dashboard/: urls.py  views.py
client/streamplatform/streamplatform/: asgi.py  settings.py  urls.py  wsgi.py
common/: go.mod  run.sh
common/golang/upload/: go.mod  upload.pb.go  upload_grpc.pb.go
common/upload/: upload.proto
transcoder/: go.mod  main.go
upload/: go.mod
upload/config/: config.go
upload/internal/adapters/bucket/: bucket.go
upload/internal/adapters/grpc/: grpc.go  server.go
upload/internal/application/core/domain/: file.go
upload/internal/ports/: api.go
watch/cmd/: main.go
