[tool.poetry]
name = "streamplatform"
version = "0.0.1"
description = "Frontend to streamdata"
authors = ["EdCrux <jecruxiz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
